# hapticore

./: .gitignore  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: phase2-prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
assets/audio/: README.md
configs/: center_out_experiment.yaml  example_config.yaml  example_experiment.yaml  example_flat_config.yaml
configs/experiments/: center_out.yaml  cup_task.yaml
configs/rig/: ci.yaml  default.yaml  dev-mouse.yaml  rig2.yaml
configs/subject/: example_subject.yaml
configs/task/: center_out.yaml  cup_task.yaml
cpp/haptic_server/: BUILDING.md  CMakeLists.txt  CMakePresets.json  build.sh  tsan_suppressions.txt
cpp/haptic_server/cmake/: CPM.cmake
cpp/haptic_server/src/: command_data.hpp  command_thread.cpp  command_thread.hpp  dhd_interface.hpp  dhd_mock.cpp  dhd_mock.hpp  dhd_real.cpp  dhd_real.hpp  haptic_thread.cpp  haptic_thread.hpp  main.cpp  msgpack_helpers.hpp  publisher_thread.cpp  publisher_thread.hpp  state_data.hpp  triple_buffer.hpp  types.hpp
cpp/haptic_server/src/force_fields/: cart_pendulum_field.cpp  cart_pendulum_field.hpp  channel_field.cpp  channel_field.hpp  composite_field.cpp  composite_field.hpp  constant_field.cpp  constant_field.hpp  field_factory.cpp  field_factory.hpp  force_field.hpp  null_field.cpp  null_field.hpp  physics_field.cpp  physics_field.hpp  spring_damper_field.cpp  spring_damper_field.hpp  workspace_limit_field.cpp  workspace_limit_field.hpp
cpp/haptic_server/tests/: CMakeLists.txt  test_dhd_mock.cpp  test_force_fields.cpp  test_integration.cpp  test_serialization.cpp  test_triple_buffer.cpp  write_test_state.cpp
data/sub-monkey_M/ses-20260507_001/: session_receipt.json
docs/: architecture.md  haptic_server_protocol.md  rig-setup.md  task_authoring_guide.md  teensy-bringup.md  xipppy_api_reference.md
docs/adr/: 001-zeromq-over-rpclib.md  002-parameterized-force-fields.md  003-python-over-monkeylogic.md  004-dhd-sdk-over-chai3d.md  005-no-bonsai.md  006-monorepo.md  007-box2d-physics-engine.md  008-lab-coordinate-convention.md  008-pydantic-settings-layered-config.md  009-pydantic-settings-layered-config.md  010-impedance-device-virtual-coupling.md  011-display-unit-convention_1.md  012-separate-camera-repo.md  013-teensy-sync-hub.md  014-parallel-event-codes.md  015-backend-factories.md  015-config-driven-backends.md  016-zmq-data-logging-over-lsl.md
docs/dev-phases/: phase1-spec.md  phase2-spec.md
firmware/teensy/: README.md  platformio.ini
firmware/teensy/src/: main.cpp  parser.cpp  parser.h  pins.h  timing.h
firmware/teensy/test/test_parser/: test_parser.cpp
firmware/teensy/tools/: teensy_bringup.py
python/hapticore/: __init__.py
python/hapticore/audio/: __init__.py  mock.py  player.py
python/hapticore/backends/: __init__.py  display.py
python/hapticore/cli/: __init__.py
python/hapticore/control/: __init__.py  app.py  config_panel.py  recording_panel.py  session_panel.py
python/hapticore/core/: __init__.py  config.py  interfaces.py  messages.py  messaging.py
python/hapticore/dashboard/: __init__.py  status_dashboard.py  workspace_mirror.py
python/hapticore/datalog/: __init__.py  data_logger_process.py
python/hapticore/display/: __init__.py  _field_visuals.py  _x11.py  client.py  display_client.py  factory.py  mock.py  photodiode.py  process.py  scene_manager.py  stimulus_factory.py
python/hapticore/haptic/: __init__.py  mock.py  mouse_bridge.py
python/hapticore/hardware/: __init__.py  haptic_client.py  mock.py  mouse_haptic.py
python/hapticore/lsl/: __init__.py  lsl_process.py
python/hapticore/recording/: __init__.py  mock.py  ripple_process.py  ripple_recording.py  xipppy_client.py
python/hapticore/session/: __init__.py  manager.py
python/hapticore/sync/: __init__.py  factory.py  mock.py  protocol.py  sync_process.py  teensy_serial.py  teensy_sync.py
python/hapticore/tasks/: __init__.py  base.py  center_out.py  controller.py  cup_task.py  template_task.py  timer.py  trial_manager.py
scripts/: generate_audio_assets.py
tests/: conftest.py
tests/display/: conftest.py  test_dashboard_display.py  test_display_integration.py  test_display_lifecycle.py  test_photodiode.py  test_scene_manager.py  test_status_dashboard_display.py  test_stimulus_factory.py
tests/fixtures/configs/: experiment.yaml  rig.yaml  subject.yaml  task.yaml  task_with_haptic_override.yaml
tests/hardware/: conftest.py  heartbeat_keeper.py  test_force_field_feel.py  test_haptic_server.py  test_interactive_channel.py  test_interactive_fields.py  test_ripple.py  test_sync.py
tests/integration/: test_cli.py  test_cross_language.py  test_haptic_server_lifecycle.py  test_pubsub.py  test_sync_process.py  test_task_session.py
tests/unit/: _haptic_server_fixture.py  test_audio.py  test_base_task.py  test_center_out.py  test_config.py  test_control_center.py  test_controller.py  test_cup_task.py  test_data_logger.py  test_display.py  test_display_client.py  test_display_factory.py  test_display_process.py  test_field_visuals.py  test_haptic_client.py  test_haptic_factory.py  test_lsl.py  test_messages.py  test_messaging.py  test_mock.py  test_mouse_bridge.py  test_mouse_haptic.py  test_recording_panel.py  test_ripple.py  test_scene_manager_logic.py  test_session_manager.py  test_session_panel.py  test_status_dashboard.py  test_sync.py  test_sync_factory.py  test_timer.py  test_trial_log.py  test_trial_manager.py  test_workspace_mirror.py
tests/unit/test_dashboard/: test_status_dashboard.py  test_workspace_mirror.py
