[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hapticore"
version = "0.1.0"
description = "Multi-process experimental control system for primate neurophysiology"
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=26.0",
    "msgpack>=1.0",
    "pydantic>=2.0",
    "pydantic-settings[yaml]>=2.3",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "transitions>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pygraphviz>=1.11",
]

[project.scripts]
hapticore = "hapticore.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "python"

[[tool.mypy.overrides]]
module = "msgpack.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psychopy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psychopy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require physical hardware",
    "interactive: tests requiring a human operator at the device (implies hardware)",
    "benchmark: benchmark tests",
    "slow: performance tests with strict thresholds (run on lab machine)",
    "display: tests requiring PsychoPy and a display (or xvfb)",
]
